--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.87);
 }
 header {
   height: 101px;
-  box-shadow: 0 1px 3px rgb(0 0 0 10%), 0 2px 2px;
+  z-index: 10;
+  position: relative;
+}
+
+*{
+  box-sizing: border-box ;
+}
+
+a {
+  color: black;
 }
 
 .logo {
@@ -65,10 +77,9 @@ header {
   font-size: 18px;
   cursor: pointer;
 }
-.find-store:hover{
-    color:#008248;
+.find-store:hover {
+  color: #008248;
 }
-
 
 .sign-in,
 .join-now {
@@ -83,10 +94,9 @@ header {
 .sign-in {
   margin-right: 16px;
 }
-.sign-in:hover{
-    background-color: rgba(0, 0, 0, 0.6);
-  transition: all .2s ease;
-
+.sign-in:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+  transition: all 0.2s ease;
 }
 
 .join-now {
@@ -99,3 +109,4 @@ header {
   background-color: rgba(0, 0, 0, 0.7);
   border-color: rgba(0, 0, 0, 0.7);
 }
+
