--- a/main.css
+++ b/main.css
@@ -97,8 +97,8 @@ section {
 
 .top-bottom-section {
   width: 50%;
-display: flex;
-margin-bottom: 32px;
+  display: flex;
+  margin-bottom: 32px;
 }
 
 .section-container {
@@ -142,9 +142,9 @@ margin-bottom: 32px;
   padding-left: 24px;
   padding-right: 24px;
   padding-bottom: 32px;
-  padding-top:16px;
-  color:#1e3932 ;
-flex-grow: 1;
+  padding-top: 16px;
+  color: #1e3932;
+  flex-grow: 1;
 }
 
 .top-bottom-section .text h1 {
@@ -153,7 +153,36 @@ flex-grow: 1;
   margin-bottom: 24px;
 }
 
-.top-bottom-section .text h3{
+.top-bottom-section .text h3 {
   font-size: 19px;
   line-height: 1.75;
+}
+
+.lgbt-section {
+  display: flex;
+}
+.lgbt-section .text {
+  width: 50%;
+  display: flex;
+  color: #1e3932;
+  padding: 32px 48px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(212, 233, 226);
+}
+
+.lgbt-section .image {
+  width: 50%;
+}
+
+.lgbt img {
+  border: 0;
+  width: 100%;
+}
+
+.text h1,
+.text h3 {
+  margin: 0;
+  font-weight: 400;
 }
