--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ header {
   position: relative;
 }
 
-*{
-  box-sizing: border-box ;
+* {
+  box-sizing: border-box;
 }
 
 a {
@@ -31,12 +31,14 @@ a {
 
 .logo img {
   height: 100%;
+  margin-top: 5px;
 }
 
 .left-nav {
   display: flex;
   height: 100%;
   align-items: center;
+  margin-top: 5px;
 }
 
 .left-nav nav ul {
@@ -61,6 +63,7 @@ a {
 .right-nav {
   display: flex;
   align-items: center;
+  margin-top: 5px;
 }
 
 .find-store {
@@ -109,4 +112,3 @@ a {
   background-color: rgba(0, 0, 0, 0.7);
   border-color: rgba(0, 0, 0, 0.7);
 }
-
